# task_manager

./: .env.example  Cargo.toml  README.md  errors.txt
.github/workflows/: ci.yml
migrations/: 20251126_001_add_features.sql  20251126_001_add_user_profile_fields.sql  20251126_002_add_messages_table.sql  20251205_001_add_user_status.sql  20251205_002_add_task_collaboration.sql
src/: db.rs  dto.rs  error.rs  main.rs  routes.rs  state.rs
src/admin/: admin_middleware.rs  mod.rs  routes.rs
src/auth/: auth_dto.rs  auth_handlers.rs  auth_models.rs  auth_repository.rs  auth_service.rs  jwt.rs  mod.rs  password.rs  routes.rs  test_token.rs
src/handlers/: auth.rs  messages.rs  mod.rs  notifications.rs  tasks.rs  users.rs
src/message/: message_dto.rs  message_handlers.rs  message_models.rs  message_repository.rs  message_service.rs  mod.rs  routes.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/notification/: mod.rs  notification.handlers.rs  notification_dto.rs  notification_handlers.rs  notification_models.rs  notification_repository.rs  notification_service.rs  routes.rs
src/repositories/: message_repository.rs  mod.rs  task_repository.rs  user_repository.rs
src/services/: mod.rs  notification_service.rs
src/task/: mod.rs  routes.rs  task_dto.rs  task_handlers.rs  task_models.rs  task_repository.rs  task_service.rs
src/user/: mod.rs  routes.rs  user_dto.rs  user_handlers.rs  user_models.rs  user_repository.rs  user_service.rs
src/websocket/: connection.rs  handler.rs  mod.rs  types.rs
